--- a/src/app/registrations/registrations.component.html
+++ b/src/app/registrations/registrations.component.html
@@ -5,26 +5,18 @@
         <label class="text-center fs-2 mb-4">{{eventData.name}}</label>
         <input class="form-control bg-accent my-2" type="text" placeholder="Search" [(ngModel)]="searchKey"
             style="height: 40px;">
-        <label class="fs-2">Stall Accounts</label>
-
-        <div class="d-flex flex-column" *ngFor="let item of stall">
-            <div class="d-flex flex-column card bg-accent my-2 p-3 text-black"
-                *ngIf="item.includes(searchKey | lowercase)">
-                <label>{{ item }}</label>
-            </div>
-        </div>
-
         <label class="fs-2">Registrations</label>
 
-        <div class="d-flex flex-column" *ngFor="let item of reg">
+        <div class="d-flex flex-column" *ngFor="let item of registrations">
             <div class="d-flex flex-column card bg-accent my-2 p-3 text-black"
-                *ngIf="item.includes(searchKey | lowercase)">
-                <label>{{ item }}</label>
+                *ngIf="item.name.toLowerCase().includes(searchKey | lowercase)">
+                <label>{{ item.username }}</label>
+                <label>{{ item.name }}</label>
             </div>
         </div>
 
         <div class="d-flex">
-            <div *ngIf="!reg" class="spinner-border spinner-border-sm m-auto"></div>
+            <div *ngIf="!registrations" class="spinner-border spinner-border-sm m-auto"></div>
         </div>
     </div>
 </div>
