--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -2,29 +2,32 @@
     <div class="display-4">Add a new event</div>
     <div class="row pt-4" [formGroup]="formData">
         <div class="col">
+            <div class="fs-4">Event slug: </div>
+            <input class="fs-5 mb-3" type="text" maxlength="30" formControlName="$slug">
             <div class="fs-4">Event name: </div>
-            <input class="fs-5 mb-3" type="text" maxlength="30" formControlName="name">
+            <input class="fs-5 mb-3" type="text" maxlength="30" formControlName="$name">
             <div class="fs-4">Event description: </div>
             <textarea class="fs-5 mb-3" type="text" maxlength="150" style="min-height: 100px;"
-                formControlName="desc"> </textarea>
+                formControlName="$desc"> </textarea>
             <div class="fs-4">Campus: </div>
             <button class="btn btn-light dropdown-toggle mb-3" type="button" data-bs-toggle="dropdown">
-                {{formData.controls.campus.value}}
+                {{formData.controls.$campus.value}}
             </button>
             <ul class="dropdown-menu primary-text">
-                <li class="dropdown-item" (click)="formData.controls.campus.setValue('Hyderabad')">Hyderabad</li>
-                <li class="dropdown-item" (click)="formData.controls.campus.setValue('Bangalore')">Bangalore</li>
-                <li class="dropdown-item" (click)="formData.controls.campus.setValue('Visakhapatnam')">Visakhapatnam
+                <li class="dropdown-item" (click)="formData.controls.$campus.setValue('Hyderabad')">Hyderabad</li>
+                <li class="dropdown-item" (click)="formData.controls.$campus.setValue('Bangalore')">Bangalore</li>
+                <li class="dropdown-item" (click)="formData.controls.$campus.setValue('Visakhapatnam')">Visakhapatnam
                 </li>
+                <li class="dropdown-item" (click)="formData.controls.$campus.setValue('All')">All</li>
             </ul>
             <div class="fs-4">Venue: </div>
-            <input class="fs-5 mb-3" type="text" maxlength="30" formControlName="venue">
+            <input class="fs-5 mb-3" type="text" maxlength="30" formControlName="$venue">
         </div>
         <div class="col">
             <div class="fs-4">Event start date: </div>
-            <input class="fs-5 mb-3" type="date" maxlength="20" formControlName="sdate">
+            <input class="fs-5 mb-3" type="date" maxlength="20" formControlName="$sdate">
             <div class="fs-4">Event end date: </div>
-            <input class="fs-5 mb-3" type="date" maxlength="20" formControlName="edate">
+            <input class="fs-5 mb-3" type="date" maxlength="20" formControlName="$edate">
             <div class="fs-4">Stall accounts:</div>
             <div class="mb-1">
                 <button class="btn btn-light m-1" *ngFor="let account of stall; let i = index"
@@ -34,7 +37,7 @@
                 style="text-transform: lowercase;">
 
             <div class="fs-4">Cost: </div>
-            <input class="fs-5 mb-3" type="number" maxlength="20" formControlName="cost">
+            <input class="fs-5 mb-3" type="number" maxlength="20" formControlName="$cost">
         </div>
     </div>
     <div class="d-flex">
@@ -53,9 +56,10 @@
                 <button class="btn btn-light" type="button" data-bs-dismiss="modal">X</button>
             </div>
             <div class="modal-body" [formGroup]="formData">
-                <input class="fs-5 mb-3" type="text" maxlength="20" placeholder="Username" formControlName="username"
-                    style="text-transform: lowercase;">
-                <input class="fs-5 mb-3" type="password" maxlength="20" placeholder="Password" formControlName="password">
+                <input class="fs-5 mb-3" type="text" maxlength="20" placeholder="Username" formControlName="$username"
+                oninput="this.value = this.value.toLowerCase()">
+                <input class="fs-5 mb-3" type="password" maxlength="20" placeholder="Password"
+                    formControlName="$password">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-light" (click)="add_event()">
