--- a/src/app/registrations/registrations.component.html
+++ b/src/app/registrations/registrations.component.html
@@ -1,12 +1,9 @@
 <div class="container h-100">
     <div class="d-flex flex-column h-100 py-5">
-        <label class="text-center fs-2">{{eventData.club}}</label>
-        <label class="text-center my-1">presents</label>
-        <label class="text-center fs-2 mb-4">{{eventData.name}}</label>
+        <label class="display-4">Registrations</label>
+        <label class="fs-2 mb-4">Event: {{eventData.name}}</label>
         <input class="form-control bg-accent my-2" type="text" placeholder="Search" [(ngModel)]="searchKey"
             style="height: 40px;">
-        <label class="fs-2">Registrations</label>
-
         <div class="d-flex flex-column" *ngFor="let item of registrations">
             <div class="d-flex flex-column card bg-accent my-2 p-3 text-black"
                 *ngIf="item.name.toLowerCase().includes(searchKey | lowercase)">
@@ -14,7 +11,6 @@
                 <label>{{ item.name }}</label>
             </div>
         </div>
-
         <div class="d-flex">
             <div *ngIf="!registrations" class="spinner-border spinner-border-sm m-auto"></div>
         </div>
