--- a/src/app/scan/scan.component.html
+++ b/src/app/scan/scan.component.html
@@ -1,10 +1,8 @@
-<div class="d-flex flex-column p-5 h-100 text-center">
-    <label class="display-4 mb-2">Scan</label>
-        <label class="fs-2">{{eventData.club}}</label>
-        <label class="my-1">presents</label>
-        <label class="fs-2 mb-4">{{eventData.name}}</label>
-    <div class="d-flex mx-auto" style="height: 250px; width: 250px;">
+<div class="d-flex flex-column p-5 h-100">
+    <label class="display-4">Scan</label>
+    <div class="d-flex m-auto" style="height: 250px; width: 250px;">
         <zxing-scanner class="mx-auto" [formats]="allowedFormats"
             (scanSuccess)="scanSuccessHandler($event)"></zxing-scanner>
     </div>
+    <label class="fs-2 mx-auto">Event: {{eventData.name}}</label>
 </div>
